fix rating star alignment (show_detail & item)

--- a/src/app/styl/views/browser/item.styl
+++ b/src/app/styl/views/browser/item.styl
@@ -118,7 +118,6 @@
                     height 1em
                     line-height 1em
                     vertical-align middle
-                    top 1px
 
             .rating-value
                 font-size 1em
