--- a/src/app/styl/views/show_detail.styl
+++ b/src/app/styl/views/show_detail.styl
@@ -124,8 +124,9 @@
                             width 1em
                             height 1em
                             line-height 1em
-                            margin-top 2px
-                            margin-right: -3px
+                            margin-top: -1px;
+                            margin-left: 3px;
+                            margin-right: -1px;
 
                 span.dot
                     margin 4.5px 15px 0 15px
